# django_point_of_sale

./: .env.example  pyproject.toml
src/customers/migrations/: 0001_initial.py
src/django_pos/: settings.py  urls.py
src/products/: models.py  urls.py  views.py
src/products/migrations/: 0001_initial.py  0002_alter_product_expire_date.py  0003_alter_product_expire_date.py
src/sales/: models.py  urls.py  views.py
src/sales/migrations/: 0001_initial.py  0002_alter_sale_customer.py  0003_alter_sale_tax_amount_alter_sale_tax_percentage.py  0004_remove_sale_tax_amount_remove_sale_tax_percentage_and_more.py  0005_remove_sale_sub_total.py  0006_rename_price_saledetail_sell_price.py  0007_sale_sub_total.py
src/static/css/: sb-admin-2.min.css
src/templates/customers/: customers.html
src/templates/pos/: index.html  sidebar.html
src/templates/products/: categories.html  products.html  products_add.html  products_update.html
src/templates/sales/: sales.html  sales_add.html  sales_details.html  sales_receipt_pdf.html
